--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -2,12 +2,11 @@
 .modall {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 1000; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -15,17 +14,17 @@
 /* Modal Content/Box */
 .modall-content {
     background-color: #fefefe;
-    margin: 5% 25%; /* 15% from the top and centered */
-    padding: 20px;
+    margin: 1.5% 20%; /* 15% from the top and centered */
     border: 1px solid #888;
     width: 65%; /* Could be more or less, depending on screen size */
 }
-
+.modal-footer{
+    padding: 10px!important;
+}
 /* The Close Button */
 .close {
-    color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -34,4 +33,15 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+#preview-product-img{
+    max-width: 200px;
+    display: block;
+}
+.btn-primary{
+    border-radius: 0;
+    border: none;
+}
+.dark-logo{
+    max-width: 130px;
 }
